2011-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Avoid use of round() because
	MSVC is still not C99-compliant.

2011-05-13  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert): Make the WIN32 font 
	work-around (2009-11-06) conditional on cairo < 2.10. Needs more 
	testing.

2011-05-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Cycle through mouse-modes by
	clicking on status bar. Suggestion by plotter@piments.com

	* src/plot.c (main): Print messages concerning codepages only in
	interactive sessions.

	* src/win/wgnuplot.rc: Give the MSVC compiler a chance to create the
	manifest itself.

	* src/win/wgraph.c (drawgraph): Fix image regression.

	* term/win.trm: Help text for antialiasing.

2011-05-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/set.c src/mouse.c:  Update documentation for the
	mouse format modes, which has been incorrect since approximately forever
	(predates CVS repository).

2011-05-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (expand_df_column):  Provide a shared routine for 
	dynamic allocation of space to hold input data lines. This replaces
	three separate instances, only one of which did proper initialization.

	* src/graphics.c (finish_filled_curve): Consolidate duplicated code.

	* src/graph3d.c (draw_3d_graphbox) src/set.c (parse_label_options)
	src/gadgets.h src/show.c src/save.c
	docs/plotstyles.gnu docs/gnuplot.doc:
	The X-axis and Y-axis labels in 3D plots can be aligned parallel to the
	respective axis using the command `set [xy]label rotate parallel`.

2011-05-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/gd.trm (PNG_options): Init font pointers before using them.

2011-05-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/eepic.trm:  New terminal option {size XX,YY}
	Bug #3170746

	* src/graphics.c (boundary):  Add a sanity check to make sure that the